crates/lex/tests/ui/not_supported_unions.stderr
error: union types not supported
 --> tests/ui/not_supported_unions.rs
  |
  | union Foo {
  | ^^^^^
